--- a/unix/vars.mak.in
+++ b/unix/vars.mak.in
@@ -32,11 +32,14 @@ SYMLINK    = @SYMLINK@
 # MANTYPE    = @MANTYPE@
 MODE       = @MODE@
 CC         = @CC@
-CFLAGS     = @CFLAGS@ @CPPFLAGS@
-LDFLAGS    = @LDFLAGS@
+CFLAGS     = @CFLAGS@ @CPPFLAGS@ @LUA_DEFINES@
+LDFLAGS    = @LDFLAGS@ 
 STD_C      = @STD_C@
 STRIP      = @STRIP@
 RANLIB     = @RANLIB@
-LIBS       = @LIBS@
+LIBS       = @LIBS@ @LUA_LIBS@
 OTHER_OBJS = @OTHER_OBJS@
 PCRE       = @PCRE@
+
+LUA_SOURCES = @LUA_SOURCES@
+LUA_OBJECTS = @LUA_OBJECTS@
