Checking if will work with flags?
- on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ compiler: gcc
 
 env:
     - OPTS=
+    - OPTS=--enable-lua
+    
 
-script: ./configure ${OPTS} && make
+script: ./configure --enable-version --enable-symlink --enable-getaddrinfo ${OPTS} && make
