--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ env:
     - OPTS=
     - OPTS=--enable-lua
     
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y liblua5.1-0-dev
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo ${OPTS} && make
