--- a/configure.in
+++ b/configure.in
@@ -74,6 +74,15 @@ AC_ARG_ENABLE(mailcheck,
   --enable-mailcheck=DIR  enable checking for mail in directory DIR
                           (needed only if configure guesses incorrectly)],
     , enable_mailcheck=yes)
+AC_ARG_ENABLE(atcp,
+[  --enable-atcp     enable ATCP support,
+    , enable_atcp=no)
+AC_ARG_ENABLE(gmcp,
+[  --enable-gmcp     enable GMCP support,
+    , enable_gmcp=no)
+AC_ARG_ENABLE(option102,
+[  --enable-option102     enable 102 option support,
+    , enable_option102=no)
 
 # User feature options
 AC_ARG_ENABLE(history,
@@ -707,6 +716,9 @@ fi
 dnl ### write variables
 
 if test "$enable_inet6"   = "yes"; then AC_DEFINE(ENABLE_INET6)  fi
+if test "$enable_atcp"    = "yes"; then AC_DEFINE(ENABLE_ATCP)  fi
+if test "$enable_gmcp"    = "yes"; then AC_DEFINE(ENABLE_GMCP)  fi
+if test "$enable_option102"  = "yes"; then AC_DEFINE(ENABLE_OPTION102)  fi
 if test "$enable_history" = "no"; then AC_DEFINE(NO_HISTORY)  fi
 if test "$enable_process" = "no"; then AC_DEFINE(NO_PROCESS)  fi
 if test "$enable_float"   = "no"; then AC_DEFINE(NO_FLOAT)    fi
