Buildin on travis only once
- But with all options

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: c
 compiler: gcc
 
-env:
-    - OPTS=
-    - OPTS=--enable-lua
-    
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y liblua5.1-0-dev
 
-script: ./configure --enable-version --enable-symlink --enable-getaddrinfo ${OPTS} && make
+script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-lua --enable-atcp --enable-gmcp --enable-option102 && make
