--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: c
 compiler: gcc
 
+os:
+ - osx
+ - linux
+
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y liblua5.1-0-dev
+  - sudo apt-get update -qq || true
+  - sudo apt-get install -y liblua5.1-0-dev || true
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-lua --enable-atcp --enable-gmcp --enable-option102 && make
