--- a/configure.in
+++ b/configure.in
@@ -54,6 +54,10 @@ AC_ARG_ENABLE(core,
 AC_ARG_ENABLE(ssl,
 [  --disable-ssl           disable SSL support],
     , enable_ssl=yes)
+# TFPYTHON patch
+AC_ARG_ENABLE(python,
+[  --enable-python        disable python interpreter],
+    , enable_python=no)
 AC_ARG_ENABLE(getaddrinfo,
 [  --enable-getaddrinfo    enable getaddrinfo() (if configure complains)
   --disable-getaddrinfo   disable getaddrinfo() (implies --disable-inet6)],
@@ -334,6 +338,19 @@ if test "$enable_ssl" = "yes"; then
 	CFLAGS="$old_CFLAGS"
 	CPPFLAGS="$old_CPPFLAGS"
     fi
+fi
+
+# python patch
+if test "$enable_python" = "yes"; then
+   AC_MSG_NOTICE([/python enabled])
+   AC_CHECK_HEADER( Python.h, , break )
+   CFLAGS="$CFLAGS -DTFPYTHON"
+   pyinc=`python -c "import distutils.sysconfig; print distutils.sysconfig.get_python_inc()"`
+   pyver=`python -c "import distutils.sysconfig; print distutils.sysconfig.get_python_version()"`
+   CPPFLAGS="$CPPFLAGS -I$pyinc"
+   LIBS="$LIBS -lpython${pyver}"
+else
+   AC_MSG_NOTICE([/python disabled])
 fi
 
 dnl ### test termcap.
