Fix for mac build
- Changed brew recipe to lua

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ os:
 before_install:
   - if [ -z "${TRAVIS_OS_NAME}" ]; then export TRAVIS_OS_NAME=linux; fi; # for our forks that do not have multi-os enabled.
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then travis_retry sudo apt-get update -qq; travis_retry sudo apt-get install liblua5.1-0-dev -y; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then travis_retry brew update; travis_retry brew install liblua; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then travis_retry brew update; travis_retry brew install lua; fi
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-lua --enable-atcp --enable-gmcp --enable-option102 && make
