--- a/configure.in
+++ b/configure.in
@@ -79,13 +79,13 @@ AC_ARG_ENABLE(mailcheck,
                           (needed only if configure guesses incorrectly)],
     , enable_mailcheck=yes)
 AC_ARG_ENABLE(atcp,
-[  --enable-atcp     enable ATCP support,
+[  --enable-atcp     enable ATCP support],
     , enable_atcp=no)
 AC_ARG_ENABLE(gmcp,
-[  --enable-gmcp     enable GMCP support,
+[  --enable-gmcp     enable GMCP support],
     , enable_gmcp=no)
 AC_ARG_ENABLE(option102,
-[  --enable-option102     enable 102 option support,
+[  --enable-option102     enable 102 option support],
     , enable_option102=no)
 
 # User feature options
