--- a/unix/vars.mak.in
+++ b/unix/vars.mak.in
@@ -37,7 +37,7 @@ LDFLAGS    = @LDFLAGS@
 STD_C      = @STD_C@
 STRIP      = @STRIP@
 RANLIB     = @RANLIB@
-LIBS       = @LIBS@ @LUA_LIBS@
+LIBS       = @LIBS@ @LUA_LIB@
 OTHER_OBJS = @OTHER_OBJS@
 PCRE       = @PCRE@
 
