Mayby now lua will work
- grr

--- a/unix/vars.mak.in
+++ b/unix/vars.mak.in
@@ -32,7 +32,7 @@ SYMLINK    = @SYMLINK@
 # MANTYPE    = @MANTYPE@
 MODE       = @MODE@
 CC         = @CC@
-CFLAGS     = @CFLAGS@ @CPPFLAGS@ @LUA_DEFINES@
+CFLAGS     = @CFLAGS@ @CPPFLAGS@ @LUA_DEFINES@ @LUA_INCLUDE@
 LDFLAGS    = @LDFLAGS@ 
 STD_C      = @STD_C@
 STRIP      = @STRIP@
