Fixes for finding python libraries

--- a/configure.in
+++ b/configure.in
@@ -349,8 +349,8 @@ fi
 if test "$enable_python" = "yes"; then
     AX_PYTHON
     CFLAGS="$CFLAGS -DTFPYTHON"
-    PYTHON_INCLUDE="-I$PYTHON_INCLUDE_DIR"
-    PYTHON_LIB="-l$PYTHON_LIB"
+    PYTHON_INCLUDE="$PYTHON_INCLUDE_DIR"
+    PYTHON_LIB="$PYTHON_LIB"
     AC_SUBST(PYTHON_INCLUDE)
     AC_SUBST(PYTHON_LIB)
 fi
