--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ addons:
     sources:
       - deadsnakes
     packages:
-      - python3.5-dev
       - lua5.2
       - liblua5.2-dev
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then travis_retry brew update; travis_retry brew install lua pcre python3; fi || true
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then travis_retry brew update; brew upgrade python; travis_retry brew install lua pcre; fi || true
+  - pyenv global system 3.6 || true
 
 env:
   matrix:
