python 3.7 for osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,19 @@ addons:
     packages:
       - lua5.2
       - liblua5.2-dev
+  homebrew:
+    packages: 
+       - python3.7
+       - lua
+       - pcre
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then travis_retry brew update; brew upgrade python; travis_retry brew install lua pcre; fi || true
-  - pyenv global system 3.6 || true
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; fi || true
+  - pyenv global system 3.7 || true
 
 env:
   matrix:
     - OPTS=""
-    - OPTS="--enable-lua"
-    - OPTS="--enable-python"
     - OPTS="--enable-lua --enable-python"
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 $OPTS && make
