--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
       - liblua5.2-dev
 
 before_install:
-  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then travis_retry brew update; brew upgrade python; travis_retry brew install lua pcre; fi || true
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then travis_retry brew update; brew remove python@2; travis_retry brew install lua pcre; fi || true
   - pyenv global system 3.6 || true
 
 env:
