--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler: gcc
 os:
   - osx
   - linux
-
+  
 dist: xenial
 
 addons:
@@ -28,7 +28,11 @@ before_install:
 env:
   global:
     - PATH=/opt/python/3.7.7/bin:$PATH
-  matrix:
+
+  jobs:
+    - OPTS=""
+    - OPTS="--enable-lua"
+    - OPTS="--enable-python"
     - OPTS="--enable-lua --enable-python"
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 $OPTS && make
