--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,25 @@ addons:
     - python3.7-dev
   homebrew:
     packages: 
-    - python3.7
+    - python@3.7
     - lua
     - pcre
-    update: true
 
 before_install:
+  - brew uninstall python@3.8 || true
   - pyenv global system 3.7 || true
 
-env:
-  global:
-    - PATH=/opt/python/3.7.7/bin:$PATH
-    
+env:    
   jobs:
     - OPTS=""
-    - OPTS="--enable-lua"
     - OPTS="--enable-python"
     - OPTS="--enable-lua --enable-python"
+
+jobs:
+  allow_failures:
+    - os: osx
+      env: OPTS="--enable-python"
+    - os: osx
+      env: OPTS="--enable-lua --enable-python"
 
 script: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 $OPTS && make
