--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install packages using brew
+      - name: Install packages on Linux
+        if: runner.os == 'Linux'
+        run: apt-get install lua
+      - name: Install packages on MacOS
         if: runner.os == 'macOS'
         run: brew install lua pcre
       - name: Configure
