--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,15 +23,16 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        if: runner.os == 'Linux'
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install packages on Linux
         if: runner.os == 'Linux'
         run: sudo apt-get install lua5.3 liblua5.3-dev
       - name: Install packages on MacOS
         if: runner.os == 'macOS'
-        run: brew uninstall --ignore-dependencies python3; brew install lua
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+        run: brew uninstall --ignore-dependencies python3; brew install lua python@${{ matrix.python-version }}
       - name: Configure
         run: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
       - name: Build
