--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Configure
         run: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
         env:
-          PATH="/usr/local/opt/python@${{ matrix.python-version }}/bin:$PATH"
+          PATH: "/usr/local/opt/python@${{ matrix.python-version }}/bin:${{ env.PATH }}"
       - name: Build
         run: make
