--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,11 @@ jobs:
         run: sudo apt-get install lua5.3 liblua5.3-dev
       - name: Install packages on MacOS
         if: runner.os == 'macOS'
-        run: brew uninstall --ignore-dependencies python3; brew install lua python@${{ matrix.python-version }}
+        run:
+#          - brew uninstall --ignore-dependencies python3
+          - brew install lua python@${{ matrix.python-version }}
+          - echo "/usr/local/opt/python@${{ matrix.python-version }}/bin" >> $GITHUB_PATH
       - name: Configure
         run: ./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
-        env:
-          PATH: "/usr/local/opt/python@${{ matrix.python-version }}/bin:${{ env.PATH }}"
       - name: Build
         run: make
