--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,13 +47,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: egor-tensin/setup-cygwin@v1
         with:
-          packages: python3
-      - name: aaaaa
-        run: dir C:\tools\cygwin\bin
+          packages: python3 make
       - name: Configure
         run: |
+          echo The current directory is %CD%
+          dir C:\tools\cygwin\bin
           C:\tools\cygwin\bin\bash.exe --login -c 'ls -alh .'
-          C:\tools\cygwin\bin\bash.exe --norc --noprofile 'ls -alh .'
+          C:\tools\cygwin\bin\bash.exe 'ls -alh .'
+          C:\tools\cygwin\bin\bash.exe 'ls -alh '
           C:\tools\cygwin\bin\bash.exe --norc --noprofile './configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102'
       - name: Build
         run: |
