--- a/configure.ac
+++ b/configure.ac
@@ -180,10 +180,26 @@ dnl XXX option: TTYDRIVER
 UNAME=`{ uname -s && uname -v && uname -r || uname -a; } 2>/dev/null`
 UNAME=`echo $UNAME`  # remove newlines
 AC_SUBST(UNAME)
-#AC_CYGWIN
 
-# Check if this is a Windows/MSYS2 system.
-if test "$OSTYPE" = "cygwin" || test "$MSYSTEM" = "MINGW32" || test "$MSYSTEM" = "MINGW64"; then
+current_os=linux
+case "$UNAME" in
+   Darwin)
+     echo 'Mac OS X'
+     current_os=darwin
+     ;;
+   Linux)
+     echo 'Linux'
+     ;;
+   CYGWIN*|MINGW32*|MSYS*|MINGW*)
+     echo 'MS Windows'
+     current_os=windows
+     ;;
+   *)
+     echo 'Other OS' 
+     ;;
+esac
+
+if test "$current_os" = "windows"; then
   echo "Windows/MSYS2 environment found."
   AC_DEFINE([PLATFORM_WINDOWS], [1], [Windows/MSYS2 shell found])
 fi
@@ -274,7 +290,7 @@ dnl on all platforms since it will _follow_ the -l option for the library
 dnl being tested.)
 LDFLAGS="$LDFLAGS $LIBDIRS"
 
-if test "$OSTYPE" = "cygwin" || test "$MSYSTEM" = "MINGW32" || test "$MSYSTEM" = "MINGW64"; then
+if test "$current_os" = "windows"; then
   AC_MSG_WARN([Ignoring missing select()...])
 else
   AC_SEARCH_LIBS(select, bsd, ,
@@ -465,7 +481,7 @@ TF_SEARCH_HEADERS(ARPA_INET_H, arpa/inet.h sys/inet.h)
 dnl ### Find nameser header
 dnl TF_SEARCH_HEADERS(NAMESER_H, arpa/nameser.h nameser.h)
 
-if test "$OSTYPE" = "cygwin" || test "$MSYSTEM" = "MINGW32" || test "$MSYSTEM" = "MINGW64"; then
+if test "$current_os" = "windows"; then
   AC_MSG_WARN([Ignoring missing netdb.h...])
 else
 dnl ### Find netdb header
