--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,13 +51,12 @@ jobs:
       - name: Debug
         run: |
           dir C:\tools\cygwin\bin
-          C:\tools\cygwin\bin\bash.exe -c 'ls -alh .'
+          C:\tools\cygwin\bin\bash.exe -c 'env'
           
       - name: Configure
         run: |
-          C:\tools\cygwin\bin\bash.exe -c 'env'
           C:\tools\cygwin\bin\bash.exe -c 'export SHELLOPTS;set -o igncr;./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102'
       - name: Build
         run: |
-          C:\tools\cygwin\bin\bash.exe -c 'make'
+#          C:\tools\cygwin\bin\bash.exe -c 'make'
           C:\tools\cygwin\bin\make.exe
