--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
           C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/local/lib || true'
           C:\tools\cygwin\bin\bash.exe -c 'ls -alh /home/runneradmin/share || true'
           C:\tools\cygwin\bin\bash.exe -c 'ls -alh /home/runneradmin/lib || true'
+          C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/include || true'
 
       - name: Configure
         run: |
